fix: overflow

--- a/figma-page/src/index.css
+++ b/figma-page/src/index.css
@@ -13,7 +13,7 @@ body {
   min-width: 375px;
   margin: 0 auto;
   padding: 0;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 
 /* Custom Scrollbar Optimization */
